--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 </td></tr>
 <tr><td>23</td><td>Fri 3/21/2025</td><td>Matrix Multiplication And Mel Spectrograms, Autocorrelation for Tempo Estimation</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video0">Module 16: Exercise 1 Audio Onsets/Offsets</a> Due Before Class
 <HR>Assignment 3 Submission 2 Due
-<HR>HW4: Tempo Estimation And Beat Tracking Out
+<HR><a href = "Assignments/HW4_RhythmAnalysis/">HW4: Tempo Estimation And Beat Tracking</a> Out
 </td></tr>
 <tr><td>24</td><td>Mon 3/24/2025</td><td>Linear Predictive Coding (LPC)</td><td><ul><li><a href = "https://ccrma.stanford.edu/~hskim08/lpc/">Hyunk-Suk Kim's Notes on Linear Predictive Coding</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module16/Video2">Module 16: Exercise 2, 3, and 4</a> Due Before Class
 </td></tr>
@@ -517,7 +517,7 @@ HW4 Part 1 Due
 <tr><td>28</td><td>Wed 4/2/2025</td><td>Harmonic-Percussive Source Separation, Matrix Multiplication for Audio Activations</td><td><ul><li><a href = "../Modules/Module18/Video0">Class notes on HPSS</a></li><li><a href = "https://www.researchgate.net/profile/Derry-Fitzgerald/publication/254583990_HarmonicPercussive_Separation_using_Median_Filtering/links/00b495396ef03235af000000/Harmonic-Percussive-Separation-using-Median-Filtering.pdf">FitzGerald 2010 Paper</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module18/Video0">Module 18: Matrix Activations for Spectral Decompositions</a> Due Before Class
 </td></tr>
 <tr><td>29</td><td>Fri 4/4/2025</td><td>Source Separation via Nonnegative matrix factorization (NMF)</td><td><ul><li><a href = "ClassExercises/Week10/Week10_NMF">Class Notes on NMF</a></li><li><a href = "https://papers.nips.cc/paper/2000/file/f9d1152547c0bde01830b7e8bd60024c-Paper.pdf">Original Lee/Seung Paper on NMF</a></li></ul></td><td></td></tr>
-<tr><td>30</td><td>Mon 4/7/2025</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Our Python Implementation of Shazam</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td bgcolor=#f4e6e7>HW4 Part 2Due
+<tr><td>30</td><td>Mon 4/7/2025</td><td>Audio Fingerprints / The Shazam Algorithm</td><td><ul><li><a href = "https://www.princeton.edu/~cuff/ele201/files/Wang03-shazam.pdf">The original Shazam Paper</a></li><li><a href = "https://github.com/ursinus-cs372-s2023/pyshazam">Our Python Implementation of Shazam</a></li><li><a href = "https://slideslive.com/38917442/characterizing-musical-correlates-of-largescale-discovery-behavior?ref=speaker-19235">Blair Kaneshiro Talk</a></li><li><a href = "https://www.youtube.com/watch?v=puVYtkh-LO4">Cinco Midi Organiser</a></li></td><td bgcolor=#f4e6e7>HW4 Part 2 Due
 <HR>HW5: The Concatenator Out
 </td></tr>
 <tr><td>31</td><td>Wed 4/9/2025</td><td>Self-Similarity in Audio, Segment Boundary Detection</td><td><ul><li><a href = "https://dl.acm.org/doi/pdf/10.1145/319463.319472">Foote 1999 Paper: Visualizing music and audio using self-similarity</a></a></li><li><a href = "https://en.wikipedia.org/wiki/Arthur_Lintgen">Arthur Lintgen bio</a></li><li><a href = "https://arxiv.org/pdf/1902.01023.pdf">Tralie 2019 Paper</a></li><li><a href = "http://www.covers1000.net/GraphDitty/">Graph Ditty</a></li></ul></td><td bgcolor=#f4e6e7>Module 19: Self-Similarity Matrices Due Before Class
@@ -1018,8 +1018,8 @@ HW4 Part 1 Due
 													</li>
 												</ul>!-->
 												</li>
-												<!--
 												<li><a href = "Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
+												<!--
 												<li><a href = "Assignments/HW5_LetItBee">HW5: Let It Bee</a>
 												<ul>
 													<li>
