--- a/Assignments/HW4_RhythmAnalysis/index.html
+++ b/Assignments/HW4_RhythmAnalysis/index.html
@@ -386,7 +386,7 @@
 										</p>
 
 										<p>
-											<b>NOTE: </b> This method of tracking beats requires us to have an estimate of the tempo up front.  Of course, we could use the methods from <a href = "#tempo">part 2</a> to compute this before running beat tracking.  
+											<b>NOTE: </b> This method of tracking beats requires us to have an estimate of the tempo up front.  Of course, we could use the methods from <a href = "#tempo">the last part</a> to compute this before running beat tracking.  
 										</p>
 										
 										<p><b>NOTE ALSO: </b>If you're curious about other techniques for beat tracking in python, check out <a href = "https://madmom.readthedocs.io/en/latest/">madmom</a>.
