Putting up all of HW5 except for writeup for two tasks

--- a/Assignments/HW5_TheConcatenator/statements.html
+++ b/Assignments/HW5_TheConcatenator/statements.html
@@ -41,7 +41,7 @@
 							<!-- Content -->
 								<section>
 									<header class="main">
-                                        <h1><a href = "index.html">Assignment 5: Let It Bee</a></h1>
+                                        <h1><a href = "index.html">Assignment 5: The Concatenator</a></h1>
                                         <h2>Musical Statements</h2>
 									</header>
 
@@ -61,194 +61,6 @@
 										1 4
 									</script>!-->
 
-
-									<HR>
-									<h2>"Kind of Something"</h2>
-									<h3>by Anonymous</h3>
-
-									<audio controls>
-										<source src="statements/kindofsomething.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-									<HR>
-									<h2>"Whopper Whopper"</h2>
-									<h3>by Anonymous</h3>
-
-									<audio controls>
-										<source src="statements/whopperwhopper.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-									<HR>
-									<h2>"Craziness"</h2>
-									<h3>by Mike</h3>
-
-									<audio controls>
-										<source src="statements/craziness.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-									<HR>
-									<h2>"Bully, By the DeadBees"</h2>
-									<h3>Original song: いじめっ子Bully (Lofi version) by Calliope Mori</h3>
-									<h3>by Dylan Flink</h3>
-
-									<audio controls>
-										<source src="statements/bully.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-								
-									<HR>
-									<h2>"The Bees in Winter"</h2>
-									<h3>by MATHCSGuru2024</h3>
-
-									<audio controls>
-										<source src="statements/beesinwinter.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-									<HR>
-									<h2>"Fin It Bee" / "Low"</h2>
-									<h3>by Diane</h3>
-
-									<audio controls>
-										<source src="statements/FinItBe.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-									<audio controls>
-										<source src="statements/Low.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-									<HR>
-									<h2>"Mega Moon" / "Mega Bees"</h2>
-									<h3>by Kacey</h3>
-
-										<p>
-											the combination of MegaMan and The Moon from DuckTales NES with the pseudonym "Duckss". I also added mega_bees because I thought the MegaMan tune sounded very good with bees after I found the right parameters.
-										</p>
-
-									<audio controls>
-										<source src="statements/megamoon.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-									<audio controls>
-										<source src="statements/megabees.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-
-								<HR>
-									<h2>"The Bird Bash"</h2>
-									<h3>by Barney Cline</h3>
-
-									<audio controls>
-										<source src="statements/thebirdbash.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-								<HR>
-									<h2>"A Bassy Modern Major General"</h2>
-									<h3>by Emily Musgrove</h3>
-
-									<audio controls>
-										<source src="statements/bassymodern.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-								<HR>
-									<h2>"We Bill Rock You" (Queen ft Ducks)</h2>
-									<h3>by Abby Prince</h3>
-
-									<audio controls>
-										<source src="statements/webillrockyou.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-
-								<HR>
-									<h2>"A Bee C by The Jackson 5"</h2>
-									<h3>by Brenden Reim</h3>
-
-									<audio controls>
-										<source src="statements/abeec.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-
-								<HR>
-									<h2>"Mr. Boing Sky"</h2>
-									<h3>by Snipes</h3>
-
-									<audio controls>
-										<source src="statements/mrboingsky.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-								<HR>
-									<h2>"Space Chatter"</h2>
-									<h3>by Panda</h3>
-
-									<audio controls>
-										<source src="statements/wsc.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-
-								<HR>
-									<h2>"WSC"</h2>
-									<h3>by Ian</h3>
-
-									<audio controls>
-										<source src="statements/wsc.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-								<HR>
-									<h2>"Buzzing Adele"</h2>
-									<h3>by Hannah</h3>
-
-										<audio controls>
-										<source src="statements/adele.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-								<HR>
-									<h2>"Doctor Who Theme"</h2>
-									<h3>by James</h3>
-									<h3>(using the <a href = "https://magenta.tensorflow.org/datasets/nsynth">nsynth dataset</a> as a source)</h3>
-
-									<audio controls>
-										<source src="statements/drwho.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-
-								<HR>
-									<h2>"Theo"</h2>
-									<h3>by Chris Tralie</h3>
-									<p>
-										We had to drive our dog Theo to get a checkup at the vet, and he hates the car.  At one point, "Take on Me" by Aha came on the radio.  In an effort to get Theo to calm down, I started to sing it to him.  Then I realized, I could have him sing along too by recording him at that moment and using "Let It Bee"
-									</p>
-
-									<audio controls>
-										<source src="statements/theo.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-
-								<!--
-								<HR>
-									<h2>"Ambient Wind"</h2>
-									<h3>by Matt</h3>
-
-									<audio controls>
-										<source src="statements/ambientwind.mp3" type="audio/mp3">
-										Your browser does not support the audio element.
-										</audio>
-								-->
 
                                 </div>
 						</div>
@@ -322,14 +134,16 @@
 												</ul>!-->
 												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
+												<li><a href = "../../Assignments/HW5_TheConcatenator">HW5: The Concatenator</a>
 												<!--
-												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a>
 												<ul>
 													<li>
-														<a href = "../../Assignments/HW5_LetItBee/statements.html">Musical Statements</a>
+														<a href = "../../Assignments/HW5_TheConcatenator/statements.html">Musical Statements</a>
 													</li>
 												</ul>
+												-->
 												</li>
+												<!--
 												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a>
 												<ul>
 													<li>
