--- a/ClassExercises/BeattrackNotes/index.html
+++ b/ClassExercises/BeattrackNotes/index.html
@@ -255,14 +255,16 @@
 												</ul>!-->
 												</li>
 												<li><a href = "../../Assignments/HW4_RhythmAnalysis">HW4: Tempo Estimation And Beat Tracking</a></li>
+												<li><a href = "../../Assignments/HW5_TheConcatenator">HW5: The Concatenator</a>
 												<!--
-												<li><a href = "../../Assignments/HW5_LetItBee">HW5: Let It Bee</a>
 												<ul>
 													<li>
-														<a href = "../../Assignments/HW5_LetItBee/statements.html">Musical Statements</a>
+														<a href = "../../Assignments/HW5_TheConcatenator/statements.html">Musical Statements</a>
 													</li>
 												</ul>
+												-->
 												</li>
+												<!--
 												<li><a href = "../../Assignments/HW6_StringAlong">HW6: String Along</a>
 												<ul>
 													<li>
