--- a/index.html
+++ b/index.html
@@ -527,17 +527,17 @@
 </td></tr>
 <tr><td>34</td><td>Wed 4/16/2025</td><td>Logistic Regression: Separating Square Waves from Sawtooth Waves</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module20/Video3">Rest of Module 20</a> Due Before Class
 </td></tr>
-<tr><td>35</td><td>Fri 4/18/2025</td><td>Neural Networks And Deep Learning</td><td><ul><li><a href = "https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi">3Blue1Brown Intro To Neural Nets</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module21/Video0">Module 21: Neural Networks</a> Due Before Class
-<HR>HW5 Tasks 1-3 Due
+<tr><td>35</td><td>Fri 4/18/2025</td><td>Neural Networks And Deep Learning</td><td><ul><li><a href = "https://www.youtube.com/playlist?list=PLZHQObOWTQDNU6R1_67000Dx_ZCJB-3pi">3Blue1Brown Intro To Neural Nets</a></li></ul></td><td bgcolor=#f4e6e7>HW5 Tasks 1-3 Due
 </td></tr>
-<tr><td>36</td><td>Mon 4/21/2025</td><td>SIRENs: Implicit Neural Representations with Periodic Activation Functions</td><td><ul><li><a href = "https://www.vincentsitzmann.com/siren/">Original 2020 NeurIPS paper on SIRENs</a></li></ul></td><td></td></tr>
+<tr><td>36</td><td>Mon 4/21/2025</td><td>SIRENs: Implicit Neural Representations with Periodic Activation Functions</td><td><ul><li><a href = "https://www.vincentsitzmann.com/siren/">Original 2020 NeurIPS paper on SIRENs</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module21/Video0">Module 21: Neural Networks</a> Due Before Class
+</td></tr>
 <tr><td>--</td><td>Wed 4/23/2025</td><td>COSA Day</td><td></td><td>No CS 372 Class.  Enjoy the break!</td></tr>
-<tr><td>37</td><td>Fri 4/25/2025</td><td>Differentiable Digital Signal Processing</td><td><ul><li><a href = "https://magenta.tensorflow.org/ddsp">Google Magenta DDSP Blog Post</a></li></ul></td><td bgcolor=#f4e6e7><a href = "../Modules/Module22/Video1">Module 22: Multiclass Classification, Convolutional Neural Networks, And Overfitting</a> Due Before Class
+<tr><td>37</td><td>Fri 4/25/2025</td><td>Convolutional Neural Networks, Data Augmentation</td><td></td><td bgcolor=#f4e6e7><a href = "../Modules/Module22/Video1">Module 22: Multiclass Classification, Convolutional Neural Networks, And Overfitting</a> Due Before Class
 </td></tr>
-<tr><td>38</td><td>Mon 4/28/2025</td><td><u>A User's Guide:</u> CREPE for fundamental frequency estimation</td><td><ul><li><a href = "https://www.justinsalamon.com/uploads/4/3/9/4/4394963/kim_crepe_icassp_2018.pdf">Jong Wook Kimg 2018: CREPE: A Convolutional Representation for Pitch Estimation</li></ul></td><td bgcolor=#f4e6e7>HW5 Tasks 4-6 Due
+<tr><td>38</td><td>Mon 4/28/2025</td><td>Differentiable Digital Signal Processing</td><td><ul><li><a href = "https://magenta.tensorflow.org/ddsp">Google Magenta DDSP Blog Post</a></li></ul></td><td bgcolor=#f4e6e7>HW5 Tasks 4-6 Due
 <HR>HW6: String Along Out
 </td></tr>
-<tr><td>39</td><td>Wed 4/30/2025</td><td>Convolutional Neural Networks, Data Augmentation</td><td></td><td></td></tr>
+<tr><td>39</td><td>Wed 4/30/2025</td><td><u>A User's Guide:</u> CREPE for fundamental frequency estimation</td><td><ul><li><a href = "https://www.justinsalamon.com/uploads/4/3/9/4/4394963/kim_crepe_icassp_2018.pdf">Jong Wook Kimg 2018: CREPE: A Convolutional Representation for Pitch Estimation</li></ul></td><td></td></tr>
 <tr><td>40</td><td>Fri 5/2/2025</td><td><u>A User's Guide:</u> Demucs for track demixing</td><td><ul><li><a href = "https://github.com/facebookresearch/demucs/tree/v2">Facebook research demucs link</a></li></ul></td><td></td></tr>
 <tr><td>41</td><td>Mon 5/5/2025</td><td><u>A User's Guide:</u> Rave for audio to audio style transfer</td><td><ul><li><a href = "https://github.com/acids-ircam/RAVE">IRCAM Rave Page</a></li></ul></td><td bgcolor=#f4e6e7>HW6 Part 1 Due
 </td></tr>
