--- a/Assignments/HW6_StringAlong/index.html
+++ b/Assignments/HW6_StringAlong/index.html
@@ -565,7 +565,7 @@
 									</ol>
 
 
-									<h4>Training with GPU</h4>
+									<h4><a name = "gpu">Training with GPU</a></h4>
 									<p>
 										Once you have your training code down and it seems like the loss is steadily decreasing, you should change your runtime to <b>GPU</b>:
 									</p>
